force-app/main/default/objects/Global_Settings__c/Global_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global Settings</description>
    <label>Global Settings</label>
</CustomObject>