force-app/main/default/objects/Global_Settings__c/fields/ApplicationURL__c.field-meta.xml
<CustomField>
    <fullName>ApplicationURL__c</fullName>
    <description>Holds the Application Site URL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ApplicationURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>