force-app/main/default/objects/Global_Settings__c/fields/DomainURL__c.field-meta.xml
<CustomField>
    <fullName>DomainURL__c</fullName>
    <description>get Domain URL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DomainURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>