force-app/main/default/objects/Global_Settings__c/fields/SiteURL__c.field-meta.xml
<CustomField>
    <fullName>SiteURL__c</fullName>
    <description>get site url</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>get site url</inlineHelpText>
    <label>SiteURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>